erDiagram
    %% ============================================================
    %% Phase 1: Core Loop MVP
    %% ============================================================

    user_account {
        uuid id PK
        text google_id UK
        text email UK
        text display_name
        text profile_image_url
        text theme_preference
        text language_preference
        timestamptz created_at
        timestamptz updated_at
    }

    project {
        uuid id PK
        uuid user_id FK
        text title
        text genre
        text theme
        text era_location
        pov_type pov
        text tone
        text source_type
        text source_input
        text source_file_key
        timestamptz deleted_at
        timestamptz created_at
        timestamptz updated_at
    }

    track {
        uuid id PK
        uuid project_id FK
        double_precision position
        text label
        timestamptz created_at
        timestamptz updated_at
    }

    scene {
        uuid id PK
        uuid track_id FK
        uuid project_id FK
        double_precision start_position
        double_precision duration
        scene_status status
        text title
        text content
        text plot_summary
        text location
        text_array mood_tags
        timestamptz created_at
        timestamptz updated_at
    }

    scene_connection {
        uuid id PK
        uuid project_id FK
        uuid source_scene_id FK
        uuid target_scene_id FK
        connection_type connection_type
        timestamptz created_at
    }

    "character" {
        uuid id PK
        uuid project_id FK
        text name
        text personality
        text appearance
        text secrets
        text motivation
        text profile_image_url
        double_precision graph_x
        double_precision graph_y
        timestamptz created_at
        timestamptz updated_at
    }

    scene_character {
        uuid scene_id PK
        uuid character_id PK
        timestamptz created_at
    }

    character_relationship {
        uuid id PK
        uuid project_id FK
        uuid character_a_id FK
        uuid character_b_id FK
        text label
        relationship_visual visual_type
        relationship_direction direction
        timestamptz created_at
        timestamptz updated_at
    }

    draft {
        uuid id PK
        uuid scene_id FK
        integer version
        text content
        integer char_count
        text source
        text edit_direction
        text model
        text provider
        integer token_count_input
        integer token_count_output
        numeric cost_usd
        timestamptz created_at
    }

    scene_summary {
        uuid scene_id PK
        integer draft_version
        text summary_text
        text model
        timestamptz created_at
        timestamptz updated_at
    }

    generation_log {
        uuid id PK
        uuid user_id FK
        uuid project_id FK
        uuid scene_id FK
        generation_type generation_type
        generation_status status
        text model
        text provider
        integer duration_ms
        integer token_count_input
        integer token_count_output
        numeric cost_usd
        text error_message
        timestamptz created_at
    }

    %% ============================================================
    %% Phase 2: Episode Layer & Foreshadowing
    %% ============================================================

    episode {
        uuid id PK
        uuid project_id FK
        integer episode_number
        text title
        integer target_word_count
        text hook_type
        timestamptz created_at
        timestamptz updated_at
    }

    scene_episode {
        uuid id PK
        uuid scene_id FK
        uuid episode_id FK
        integer position
        timestamptz created_at
    }

    foreshadowing_link {
        uuid id PK
        uuid project_id FK
        uuid setup_scene_id FK
        uuid payoff_scene_id FK
        text description
        boolean is_resolved
        timestamptz created_at
        timestamptz updated_at
    }

    %% ============================================================
    %% Phase 3+: World Map & Temporal Relationships
    %% ============================================================

    location {
        uuid id PK
        uuid project_id FK
        text name
        text description
        double_precision map_x
        double_precision map_y
        timestamptz created_at
        timestamptz updated_at
    }

    character_relationship_history {
        uuid id PK
        uuid relationship_id FK
        double_precision valid_from_position
        double_precision valid_until_position
        text label
        relationship_visual visual_type
        timestamptz created_at
    }

    %% ============================================================
    %% Relationships
    %% ============================================================

    user_account ||--o{ project : "owns"
    user_account ||--o{ generation_log : "incurs"
    project ||--o{ track : "contains"
    project ||--o{ "character" : "contains"
    project ||--o{ scene_connection : "contains"
    project ||--o{ character_relationship : "contains"
    project ||--o{ generation_log : "tracks"
    project ||--o{ episode : "organizes"
    project ||--o{ foreshadowing_link : "contains"
    project ||--o{ location : "contains"
    track ||--o{ scene : "contains"
    scene ||--o{ scene_character : "involves"
    scene ||--o{ draft : "has versions"
    scene ||--o| scene_summary : "summarized by"
    scene ||--o{ scene_episode : "mapped to"
    "character" ||--o{ scene_character : "appears in"
    "character" ||--o{ character_relationship : "participates"
    character_relationship ||--o{ character_relationship_history : "evolves"
    episode ||--o{ scene_episode : "contains"
